loader cut off fixed

--- a/src/assets/stylesheets/sass/utilities/_other.scss
+++ b/src/assets/stylesheets/sass/utilities/_other.scss
@@ -166,6 +166,7 @@
   border: 2px solid map.get(config.$loader-colors, 'primary');
   border-radius: map.get(variables.$radius, 'round');
   border-top-color: map.get(config.$loader-colors, 'primary-top');
+  margin: 0;
   @include mixins.square(1.4rem);
   @include mixins.square(1.4rem, 'max');
 }
